--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
+    "pdf-lib": "^1.17.1",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2"
   }
