--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "nodemailer": "^6.9.16",
+    "nodemailer-express-handlebars": "^3.0.0",
     "nodemon": "^3.1.9",
     "pdf-lib": "^1.17.1",
     "sequelize": "^6.37.5",
